[package]
name = "async-scoped"
version = "0.9.0"
authors = ["Rajsekar Manokaran <rajsekar@gmail.com>"]
edition = "2024"

documentation = "https://docs.rs/async-scoped"
description = "Spawn scoped (non 'static) asynchronous futures for async_std and tokio runtimes"
homepage = "https://github.com/rmanoka/async-scoped"
repository = "https://github.com/rmanoka/async-scoped"
readme = "README.md"

categories = ["asynchronous", "concurrency"]
keywords = ["async", "async-std", "tokio", "scoped", "spawn"]
license = "Apache-2.0/MIT"

[package.metadata.docs.rs]
features = ["use-async-std", "use-tokio"]

[features]
# Verify package.metadata.docs.rs when updating
use-async-std = ["async-std"]
use-tokio = ["tokio"]
default = ["use-tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", optional = true }
futures = "0.3.15"
pin-project = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"], optional = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
femme = "2.2.1"
log = { version = "0.4.20", features = ["kv_unstable"] }

[[bench]]
name = "spawner"
path = "benches/spawner.rs"
harness = false
