[package]
name = "sweet-async-scoped"
version = "0.9.0"
authors = [
    "Sweet Security <admin@sweet.security>",
    "Rajsekar Manokaran <rajsekar@gmail.com>",
]
edition = "2024"

documentation = "https://docs.rs/sweet-async-scoped"
description = "Spawn scoped (non 'static) asynchronous futures for async_std and tokio runtimes"
homepage = "https://github.com/yuvald-sweet-security/async-scoped"
repository = "https://github.com/yuvald-sweet-security/async-scoped"
readme = "README.md"

categories = ["asynchronous", "concurrency"]
keywords = ["async", "async-std", "tokio", "scoped", "spawn"]
license = "Apache-2.0/MIT"

[package.metadata.docs.rs]
features = ["use-async-std", "use-tokio"]

[lib]
name = "async_scoped"

[features]
# Verify package.metadata.docs.rs when updating
use-async-std = ["async-std"]
use-tokio = ["tokio"]
default = ["use-tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.13.2", optional = true }
futures = "0.3.31"
pin-project = "1.1"
tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
], optional = true }

[dev-dependencies]
async-std = { version = "1.13.2", features = ["attributes"] }
femme = "2.2.1"
log = { version = "0.4.28", features = ["kv_unstable"] }

[[bench]]
name = "spawner"
path = "benches/spawner.rs"
harness = false
